# Pixel-Orbit

./: Bullet.cpp  Bullet.h  Bullet.qml  CMakeLists.txt  Controller.cpp  Controller.h  Enemy.cpp  Enemy.h  Enemy.qml  README.md  class1.h  class2.h  main.cpp  main.qml
assets/: asset.qrc  assets.qrc
